// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates .buildGroupCollapsed calls template with correct string and indentation level: 0 1`] = `
"
    if (typeof window !== 'undefined') {
      console.groupCollapsed(TITLE);
    } else {
      console.log('▼ ', TITLE);
    }
  "
`;

exports[`Templates .buildGroupCollapsed calls template with correct string and indentation level: 1 1`] = `
"
    if (typeof window !== 'undefined') {
      console.groupCollapsed(TITLE);
    } else {
      console.log('| ▼ ', TITLE);
    }
  "
`;

exports[`Templates .buildGroupCollapsed calls template with correct string and indentation level: 2 1`] = `
"
    if (typeof window !== 'undefined') {
      console.groupCollapsed(TITLE);
    } else {
      console.log('| | ▼ ', TITLE);
    }
  "
`;

exports[`Templates .buildGroupCollapsed calls template with correct string and indentation level: 3 1`] = `
"
    if (typeof window !== 'undefined') {
      console.groupCollapsed(TITLE);
    } else {
      console.log('| | | ▼ ', TITLE);
    }
  "
`;

exports[`Templates .buildGroupEnd calls template with correct string 1`] = `
"
  if (typeof window !== 'undefined') {
    console.groupEnd(TITLE);
  }
"
`;

exports[`Templates .buildLog calls template with correct string and indentation level: 1 1`] = `
"
    if (typeof window !== 'undefined') {
      console.log(ARGS);
    } else {
      console.log('| | ', ARGS);

    }
  "
`;

exports[`Templates .buildLog calls template with correct string and indentation level: 2 1`] = `
"
    if (typeof window !== 'undefined') {
      console.log(ARGS);
    } else {
      console.log('| | | ', ARGS);

    }
  "
`;

exports[`Templates .buildLog calls template with correct string and indentation level: 3 1`] = `
"
    if (typeof window !== 'undefined') {
      console.log(ARGS);
    } else {
      console.log('| | | | ', ARGS);

    }
  "
`;
